--- a/app/components/lists/navList.scss
+++ b/app/components/lists/navList.scss
@@ -1,34 +1,26 @@
-.listItem {
-	width: 100%;
-	// border: 1px solid white;
+%remove-margin {
+	margin: 0;
+}
+
+%center-vertically {
 	display: flex;
-	flex-direction: column;
-	.row {
-		display: flex;
-		.element {
-			display: flex;
-			flex: 1 1 auto;
-		}
-	}
+	align-items: center;
+}
+
+.invoiceListWrapper {
+	color: #212121;
+	max-height: 20rem;
+	overflow-y: auto;
 }
 
 .invoiceHeader,
 .invoiceBody {
+	@extend %remove-margin;
 	border-top: 1px solid #bababa;
 	border-bottom: 1px solid #bababa;
-
-	.row {
-		.element {
-			padding: 0 1rem;
-			&:first-child {
-				flex-grow: 4;
-				justify-content: flex-start;
-			}
-
-			line-height: 2.8rem;
-			justify-content: center;
-		}
-	}
+	font-size: 0.8rem;
+	font-weight: 500;
+	line-height: 2.8rem;
 }
 
 .subTotalGrandTotal {
@@ -37,9 +29,24 @@
 
 .invoiceBody {
 	border-top: none;
-	.row {
-		.element {
-			line-height: 3.6rem;
+	line-height: 3.6rem;
+
+	&.formWrapper {
+		&.row {
+			@extend %remove-margin;
+			@extend %center-vertically;
+		}
+
+		.formGroup {
+			margin-bottom: 0;
+		}
+
+		.inputGroup {
+			padding-left: 0;
+			.row {
+				@extend %remove-margin;
+				@extend %center-vertically;
+			}
 		}
 	}
 }
