--- a/app/components/root.scss
+++ b/app/components/root.scss
@@ -4,7 +4,8 @@ html {
 	height: 100%;
 }
 body {
-	font-family: 'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+	font-family: 'Montserrat', 'Open Sans', 'Helvetica Neue', Arial, Helvetica,
+		sans-serif;
 
 	font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
