--- a/app/components/mainContent/mainContent.scss
+++ b/app/components/mainContent/mainContent.scss
@@ -1,3 +1,5 @@
+@import 'styles/colors.scss';
+
 .contentWrapper {
 	position: fixed;
 	top: 0;
@@ -16,12 +18,14 @@
 	z-index: 1;
 	transition: padding 0.35s cubic-bezier(0.4, 0, 0.2, 1);
 
-	background-color: aliceblue;
+	background-color: color(solitude);
 
 	.card {
 		width: 64rem;
 		margin: 0 auto;
 		padding: 3rem;
+		box-shadow: 0 0.063em 0.313em 0 rgba(0, 0, 0, 0.07),
+			0 0.438em 1.063em 0 rgba(0, 0, 0, 0.1);
 	}
 }
 
