--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -4,18 +4,21 @@ $color-list: (
 		grayish-blue: #2e373f,
 	//blues
 		dusk-blue: #2e5b9d,
+	lochmara: #2d6596,
 	dusk-blue-two: #264b82,
 	azure: #28a8fb,
-	cornflower-blue: #3f7cd9,
+	cornflower-blue: #5eaafa,
 	dark-sky-blue: #4e8eed,
 	//greens
 		cool-green: #34ca62,
 	//reds & yellows
-		salmon-two: #ff6666,
+		brilliant-rose: #ff64a1,
+	salmon-two: #ff6666,
 	dull-red: #b34747,
 	//light
 		white: #ffffff,
 	off-white: #eeeeee,
+	solitude: #f2f3f5,
 	//special
 		transparent: rgba(0, 0, 0, 0)
 );
