--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -2,6 +2,8 @@ $color-list: (
 	// sass map
 		//dark
 		grayish-blue: #2e373f,
+	//greys
+		manatee: #8c95a6,
 	//blues
 		dusk-blue: #2e5b9d,
 	lochmara: #2d6596,
