--- a/app/components/dialogs/newInvoice.scss
+++ b/app/components/dialogs/newInvoice.scss
@@ -2,10 +2,14 @@
 $standardBorderRadius: 4px;
 
 .navigation {
-	padding: 16px;
 	background-color: color(solitude);
 	border-bottom-left-radius: $standardBorderRadius;
 	border-bottom-right-radius: $standardBorderRadius;
+	text-align: right;
+
+	&.horizontal {
+		padding: 16px;
+	}
 
 	.button {
 		width: 10rem;
@@ -25,5 +29,12 @@ $standardBorderRadius: 4px;
 		border-radius: $standardBorderRadius;
 		box-shadow: 0 0.938em 2.188em rgba(50, 50, 93, 0.1),
 			0 0.313em 0.938em rgba(0, 0, 0, 0.07);
+		.body {
+			padding: 0;
+
+			.invoiceListWrapper {
+				margin: 1.4rem;
+			}
+		}
 	}
 }
