--- a/app/components/mainContent/mainContent.scss
+++ b/app/components/mainContent/mainContent.scss
@@ -72,6 +72,11 @@
 	.buttonWrapper {
 		display: flex;
 		align-items: center;
-		padding: 0 2rem;
+		padding-left: 2rem;
+
+		.button {
+			border-radius: 4px;
+			border: 1px solid color(cornflower-blue);
+		}
 	}
 }
