--- a/app/components/mainContent/mainContent.scss
+++ b/app/components/mainContent/mainContent.scss
@@ -1,4 +1,6 @@
 @import 'styles/colors.scss';
+$scrollbar-file: 'styles/scrollbars.scss';
+$contentWrapperBGColor: color(solitude);
 
 .contentWrapper {
 	position: fixed;
@@ -18,7 +20,19 @@
 	z-index: 1;
 	transition: padding 0.35s cubic-bezier(0.4, 0, 0.2, 1);
 
-	background-color: color(solitude);
+	background-color: $contentWrapperBGColor;
+
+	composes: hover-spaced-6-8-dark from $scrollbar-file;
+	&::-webkit-scrollbar-track {
+		background-color: $contentWrapperBGColor;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		&:hover {
+			border-color: $contentWrapperBGColor;
+		}
+		border-color: $contentWrapperBGColor;
+	}
 
 	.card {
 		width: 64rem;
