--- a/app/components/sideBars/appSideBar.scss
+++ b/app/components/sideBars/appSideBar.scss
@@ -2,6 +2,7 @@
 
 $sidebarBGColor: color(grayish-blue);
 $sidebarBGColorHovered: lighten($sidebarBGColor, 8%);
+$scrollbar-file: 'styles/scrollbars.scss';
 
 .sideBarWrapper {
 	position: fixed;
@@ -14,6 +15,19 @@ $sidebarBGColorHovered: lighten($sidebarBGColor, 8%);
 	flex-direction: column;
 	background-color: $sidebarBGColor;
 	color: color(white);
+	overflow-y: auto;
+	composes: hover-spaced-6-8-dark from $scrollbar-file;
+
+	&::-webkit-scrollbar-track {
+		background-color: $sidebarBGColor;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		&:hover {
+			border-color: $sidebarBGColor;
+		}
+		border-color: $sidebarBGColor;
+	}
 
 	.listItem {
 		&.listItemActive {
